--- a/swagger/paths/water/get.yaml
+++ b/swagger/paths/water/get.yaml
@@ -1,27 +1,27 @@
 tags:
   - Contacts
-summary: Get Contacts
-operationId: getContacts
-description: 'Get list of contacts'
+summary: Get Water Info
+operationId: getAllWater
+description: 'Get water info'
 security:
   - bearerAuth: []
 parameters:
   - in: query
-    name: page
+    name: day
     schema:
       type: integer
     example: 1
   - in: query
-    name: perPage
+    name: month
     schema:
       type: integer
       example: 10
   - in: query
-    name: sortBy
+    name: year
     schema:
       type: string
-      example: 'name'
-    description: "All contact's fields can be mentioned. Default value - _id"
+      example: 2024
+    description: 'All fields can be mentioned. Default value - _id'
   - in: query
     name: sortOrder
     schema:
@@ -30,7 +30,7 @@ parameters:
       example: 'asc'
 responses:
   '200':
-    description: Successfully found contacts!
+    description: Successfully found used water!
     content:
       application/json:
         schema:
@@ -45,7 +45,7 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found contacts!
+              example: Successfully found used water!
             data:
               type: object
               required:
@@ -60,16 +60,16 @@ responses:
                 items:
                   type: array
                   items:
-                    $ref: '../../components/schemas/contacts.yaml'
+                    $ref: '../../components/schemas/water.yaml'
                 page:
                   type: number
                   example: 2
                 perPage:
                   type: number
-                  example: 4
+                  example: 30
                 totalItems:
                   type: number
-                  example: 4
+                  example: 30
                 totalPages:
                   type: number
                   example: 4
