--- a/swagger/paths/water/{id}/get.yaml
+++ b/swagger/paths/water/{id}/get.yaml
@@ -1,8 +1,8 @@
 tags:
-  - Contacts
-summary: Get contacts by id
-operationId: getContact
-description: 'Get contact by id'
+  - Water
+summary: Get water by id
+operationId: getWaterById
+description: 'Get water by id'
 security:
   - bearerAuth: []
 parameters:
@@ -14,7 +14,7 @@ parameters:
       example: '65ca67e7ae7f10c88b598384'
 responses:
   '200':
-    description: 'Get contact by id'
+    description: 'Get water by id'
     content:
       application/json:
         schema:
@@ -29,9 +29,9 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found student with id 65ca67e7ae7f10c88b598384!
+              example: Successfully found information about used with id 65ca67e7ae7f10c88b598384!
             data:
               type: object
-              $ref: '../../../components/schemas/contacts.yaml'
+              $ref: '../../../components/schemas/water.yaml'
   '404':
     $ref: '../../../components/responses/404.yaml'
