--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.21.2",
     "google-auth-library": "^9.11.0",
     "handlebars": "^4.7.8",
+    "helmet": "^8.1.0",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
